# agentphone

./: .auto-claude-status  .gitignore  CONTRIBUTING.md  PACKAGE_SETUP.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_EMULATOR.md  TEST_COMPLETE_SYSTEM.md
droidrun-controller/: .env.example  .gitignore  AGENTS.md  QUICK_START_DEV.md  README.md  demo_hot_reload.py  dev.py  dev_watchdog.py  main.py  package.json  pyproject.toml  requirements.txt  run_app.py  test_laravel_connection.py  workflows.db
droidrun-controller/agents/: __init__.py  config.py
droidrun-controller/app/: __init__.py  backend.py  main.py  theme.py
droidrun-controller/docs/: AUTH_API.md  COMPONENT_GUIDE.md  DESIGN_SYSTEM.md  HOT_RELOAD.md  PHONE_VIEWER_IMPROVEMENTS.md  REALTIME_FEATURE_README.md  SOCKET_JOB_IMPLEMENTATION.md  UI_AUDIT_REPORT.md
droidrun-controller/examples/: auth_check_example.py  run_agent.py
droidrun-controller/portal-apk/: README.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
droidrun-controller/scripts/: verify_memory_leak.sh
droidrun-controller/tests/: __init__.py  conftest.py  test_api_auth.py  test_auth_check.py  test_auth_utils.py  test_job_api.py  test_realtime_backend.py  test_socket_server.js  test_soketi_connection.py  test_validation.py  test_workflow_service.py
droidrun-controller/trajectories/: trajectory_20251223_141840_Mở_app_Settings_(Cài_đặt).json  trajectory_20251223_142022_Mở_app_Settings_(Cài_đặt).json  trajectory_20251223_142133_Mở_app_Settings_(Cài_đặt).json  trajectory_20251223_144021_Mở_app_Settings.json  (+5 more)
(+1286 files in other folders)
